--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-
 <!-- <a href="#" class="btn btn-large btn-primary">Sign up</a> -->
-<img alt="Rails" src="/assets/rails.png" />
+<!--img alt="Rails" src="/assets/rails.png" /-->
+<h1> Navigate to your preferred destination </h1>
 <% if signed_in? %>
-	<% redirect_to cuurrent_user %>
+	<%= link_to "Resume", resumes_path, class:'btn btn-large btn-primary' %>
+	<%= link_to "Homepage", homepages_path, class:'btn btn-large btn-primary' %>
 <% end %>
