--- a/app/assets/stylesheets/resumes.css.scss
+++ b/app/assets/stylesheets/resumes.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the resumes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#resume {
+	float: left;
+	overflow: auto;
+}
+
+#form {
+	float: right;
+	overflow: auto;
+}
