--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -53,7 +53,7 @@
 					</label>
 					<input id="contact" type="text" name="contact" onchange="updateResume()">
 				</div>
-				<button>+</button>
+				<button onclick="addEducation()">+</button>
 			</div>
 		</form>
 	</div>
@@ -90,6 +90,10 @@
 			return true;
 		else
 			return false;
+	}
+	function addEducation()
+	{
+		$("#educationgroup").children("div").first().clone(true).insertBefore("#educationgroup > div:last-child");
 	}
 	$('#contactcheck').change(function () {
 		updateResume();
