--- a/app/views/resumes/home.html.erb
+++ b/app/views/resumes/home.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, "Resume Home") %>
 
 <%= link_to 'Create Resume', resumes_createpage_path , class:"btn btn-primary" %> 
+
+<%= link_to 'Existing Resume', resumes_viewlist_path , class:"btn btn-primary" %> 
