--- a/app/views/resumes/viewlist.html.erb
+++ b/app/views/resumes/viewlist.html.erb
@@ -3,7 +3,12 @@
 	<% @resume_list.each do |resume| %>
 		<li> <%= resume.resume_filename %>| <%= link_to "View/Edit", resumes_viewedit_path(:resume_id => resume.id) %> | 
 			<%= link_to "Delete", resumes_delete_path(resume_id: resume.id), method: :delete, confirm: "Are you sure? All data for this resume will be lost" %> | 
-			Download <%= link_to "html", resumes_download_path(resume: resume.id ) %>  </li>
+			Download 
+			<%= link_to "html", resumes_download_path(resume_id: resume.id, format: "html" ) %>  
+			<%= link_to "pdf", resumes_download_path(resume_id: resume.id, format: "pdf" ) %>
+			<%= link_to "latex", resumes_download_path(resume_id: resume.id, format: "latex" ) %>
+			<%= link_to "json", resumes_download_path(resume_id: resume.id, format: "json" ) %>
+		</li>
 	<% end %>
 	</ul>
 </div>
