Resolved submit on every button click (default button = submit)

--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -20,7 +20,7 @@
 
 			<div class="checkbox">
 				<label class="fieldname">
-					<button onclick="$('#contactgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="contactcheck" checked> Contact :
+					<button type="button" type="button" onclick="$('#contactgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="contactcheck" checked> Contact :
 				</label>
 			</div>
 			<div class="formgroup" id="contactgroup">
@@ -36,30 +36,30 @@
 			</div>
 			<div class="checkbox">
 				<label class="fieldname">
-					<button onclick="$('#educationgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="educationcheck" checked> Education :
+					<button type="button" onclick="$('#educationgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="educationcheck" checked> Education :
 				</label>
 			</div>
 			<div class="formgroup" id="educationgroup">
-				<button onclick="addEducation()">+</button>
+				<button type="button" onclick="addEducation()">+</button>
 			</div>
 
 			
 			<div class="checkbox">
 				<label class="fieldname">
-					<button onclick="$('#acadAchievementsgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="acadAchievementscheck" checked> Academic Achievements :
+					<button type="button" onclick="$('#acadAchievementsgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="acadAchievementscheck" checked> Academic Achievements :
 				</label>
 			</div>
 			<div class="formgroup" id="acadAchievementsgroup">
-				<button onclick="addAcadAchievements()">+</button>
+				<button type="button" onclick="addAcadAchievements()">+</button>
 			</div>
 
 			<div class="checkbox">
 				<label class="fieldname">
-					<button onclick="$('#workExperiencegroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="workExperiencecheck" checked> Work Experience :
+					<button type="button" onclick="$('#workExperiencegroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="workExperiencecheck" checked> Work Experience :
 				</label>
 			</div>
 			<div class="formgroup" id="workExperiencegroup">
-				<button onclick="addWorkExperience()">+</button>
+				<button type="button" onclick="addWorkExperience()">+</button>
 			</div>
 			<input type="submit" class="btn btn-primary">
 			<input type="hidden" id="htmlpage" name="htmlpage">
