--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -17,10 +17,9 @@
 			</label>
 			<input id="name" type="text" name="name" onchange="updateResume()">
 			<br>
-
 			<div class="checkbox">
 				<label class="fieldname">
-					<button onclick="$('#contactgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="contactcheck" checked> Contact :
+					<button onclick="$('#contactgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="contactcheck" name="contactcheck" checked> Contact :
 				</label>
 			</div>
 			<div class="formgroup" id="contactgroup">
@@ -36,7 +35,7 @@
 			</div>
 			<div class="checkbox">
 				<label class="fieldname">
-					<button onclick="$('#educationgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="educationcheck" checked> Education :
+					<button onclick="$('#educationgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="educationcheck" name = "educationcheck" checked> Education :
 				</label>
 			</div>
 			<div class="formgroup" id="educationgroup">
@@ -46,7 +45,7 @@
 			
 			<div class="checkbox">
 				<label class="fieldname">
-					<button onclick="$('#acadAchievementsgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="acadAchievementscheck" checked> Academic Achievements :
+					<button onclick="$('#acadAchievementsgroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="acadAchievementscheck" name="acadAchievementscheck"checked> Academic Achievements :
 				</label>
 			</div>
 			<div class="formgroup" id="acadAchievementsgroup">
@@ -55,7 +54,7 @@
 
 			<div class="checkbox">
 				<label class="fieldname">
-					<button onclick="$('#workExperiencegroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="workExperiencecheck" checked> Work Experience :
+					<button onclick="$('#workExperiencegroup').slideToggle(); toggleUpDown();">^</button><input type="checkbox" id="workExperiencecheck" name="workExperiencecheck"checked> Work Experience :
 				</label>
 			</div>
 			<div class="formgroup" id="workExperiencegroup">
@@ -168,20 +167,20 @@
 							<input type="checkbox" id="educheck'+edu_index+'" checked> Class :\
 						</label>\
 					</div>\
-					<input id="class'+edu_index+'" type="text" name="email" onchange="updateResume()">\
+					<input id="class'+edu_index+'" type="text" name="class'+edu_index+'" onchange="updateResume()">\
 					<br>\
 					<label>\
 						Board / University\
 					</label>\
-					<input id="board'+edu_index+'" type="text" name="contact" onchange="updateResume()">\
+					<input id="board'+edu_index+'" type="text" name="board'+edu_index+'" onchange="updateResume()">\
 					<label>\
 						Year of passing\
 					</label>\
-					<input id="yearofpassing'+edu_index+'" type="text" name="contact" onchange="updateResume()">\
+					<input id="yearofpassing'+edu_index+'" type="text" name="yearofpassing'+edu_index+'" onchange="updateResume()">\
 					<label>\
 						Percentage / grade\
 					</label>\
-					<input id="grade'+edu_index+'" type="text" name="contact" onchange="updateResume()">\
+					<input id="grade'+edu_index+'" type="text" name="grade'+edu_index+'" onchange="updateResume()">\
 				</div>';
 		edu_index += 1;
 		$("#educationgroup").append(data);
@@ -193,7 +192,7 @@
 		data =data + '<div class="checkbox">\
 							<input type="checkbox" id="acadAchievcheck'+acadAchievements_index+'" checked>\
 					</div>\
-					<input id="acadAchieve'+acadAchievements_index+'" type="text" name="acadAchievement" onchange="updateResume()">\
+					<input id="acadAchieve'+acadAchievements_index+'" type="text" name="acadAchieve'+acadAchievements_index+'" onchange="updateResume()">\
 					<br>\
 				</div>';
 		acadAchievements_index += 1;
@@ -205,7 +204,7 @@
 		data =data + '<div class="checkbox">\
 							<input type="checkbox" id="workExpEntrycheck'+workExp_index+'" checked>\
 					</div>\
-					<input id="workexpentry'+workExp_index+'" type="text" name="workExp" onchange="updateResume()">\
+					<input id="workexpentry'+workExp_index+'" type="text" name="workexpentry'+workExp_index+'" onchange="updateResume()">\
 					<br>\
 				</div>';
 		workExp_index += 1;
